--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 backports.zoneinfo==0.2.1
 Django==4.2.4
 django-allauth==0.51.0
+django-countries==7.2.1
 django-crispy-forms==1.14.0
 oauthlib==3.2.2
 Pillow==10.0.0
@@ -9,3 +10,4 @@ PyJWT==2.8.0
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
 sqlparse==0.4.4
+stripe==6.1.0
