--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 asgiref==3.7.2
 backports.zoneinfo==0.2.1
+dj-database-url==0.5.0
 Django==4.2.4
 django-allauth==0.51.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
 oauthlib==3.2.2
 Pillow==10.0.0
+psycopg2==2.9.7
 PyJWT==2.8.0
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
