--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
 asgiref==3.7.2
-backports.zoneinfo;python_version<"3.9"
+backports.zoneinfo==0.2.1
+boto3==1.28.38
+botocore==1.31.38
 dj-database-url==0.5.0
 Django==4.2.4
 django-allauth==0.51.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
+django-storages==1.13.2
 gunicorn==21.2.0
+jmespath==1.0.1
 oauthlib==3.2.2
 Pillow==10.0.0
 psycopg2==2.9.7
 PyJWT==2.8.0
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
+s3transfer==0.6.2
 sqlparse==0.4.4
 stripe==6.1.0
+urllib3==1.26.16
