--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.7.2
-backports.zoneinfo==0.2.1;python_version<"3.9"
+backports.zoneinfo==0.2.1
 boto3==1.28.38
 botocore==1.31.38
 dj-database-url==0.5.0
@@ -8,6 +8,7 @@ django-allauth==0.51.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
 django-storages==1.13.2
+django-summernote==0.8.20.0
 gunicorn==21.2.0
 jmespath==1.0.1
 oauthlib==3.2.2
